unpackaged/main/default/objects/Account/fields/Account_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Unit__c</fullName>
    <label>Account Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>