unpackaged/main/default/objects/Account/fields/Account_Contact_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Owner_Id__c</fullName>
    <description>this is a temp field requested for testing fusion and should never be deployed to production.</description>
    <label>Account Contact Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>