unpackaged/main/default/objects/Account/fields/Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Count__c</fullName>
    <description>Field used to Sum the Accounts on Reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field used to Sum the Accounts on Reports</inlineHelpText>
    <label>Account Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>