unpackaged/main/default/objects/Account/fields/Account_Edition_Summary__c.field-meta.xml
<CustomField>
    <fullName>Account_Edition_Summary__c</fullName>
    <label>Account Edition Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>