unpackaged/main/default/objects/Account/fields/Account_Name_Common__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Common__c</fullName>
    <label>Account Name (Common)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>