unpackaged/main/default/objects/Account/fields/Account_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Division__c</fullName>
    <formula>Owner.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner - Division</label>
    <type>Text</type>
</CustomField>