unpackaged/main/default/objects/Account/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <description>this is a temp field requested to test the fusion integration and should never be deployed to production.</description>
    <label>Account Owner Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>