unpackaged/main/default/objects/Account/fields/Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Score__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Account Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>