unpackaged/main/default/objects/Account/fields/Account_Total_ACV__c.field-meta.xml
<CustomField>
    <fullName>Account_Total_ACV__c</fullName>
    <description>The annual value of all customer’s current contracts (software &amp; services)</description>
    <inlineHelpText>The annual value of all customer’s current contracts (software &amp; services)</inlineHelpText>
    <label>Account Total ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>