unpackaged/main/default/objects/Account/fields/Account_Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Account_Total_ARR__c</fullName>
    <description>The annual value of customer’s current contracts (software only)</description>
    <inlineHelpText>The annual value of customer’s current contracts (software only)</inlineHelpText>
    <label>Account Total ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>