unpackaged/main/default/objects/Account/fields/Allocation_Temp__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Temp__c</fullName>
    <label>Allocation - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth (AM and CSM)</fullName>
            </value>
            <value>
                <fullName>Growth (Only AM)</fullName>
            </value>
            <value>
                <fullName>Retain (Only CSM)</fullName>
            </value>
            <value>
                <fullName>No longer a customer or bad data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>