unpackaged/main/default/objects/Account/fields/Billing_Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Billing_Attention_To__c</fullName>
    <label>Billing Attention To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>