unpackaged/main/default/objects/Account/fields/Billing_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Customer_ID__c</fullName>
    <description>This is the customer ID from Finance - Unique for each Account - The field is called Billing Contract ID on the Brightcove Account.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the customer ID from Finance - Unique for each Account - The field is called Billing Contract ID on the Brightcove Account.</inlineHelpText>
    <label>Billing Customer ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>