unpackaged/main/default/objects/Account/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>