unpackaged/main/default/objects/Account/fields/Business_Development_Rep__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BDR</description>
    <label>Business Development Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filterItems>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>BDR</relationshipName>
    <type>Lookup</type>
</CustomField>