unpackaged/main/default/objects/Account/fields/Business_Unit_donotuse__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_donotuse__c</fullName>
    <label>Account Business Unit (do not use)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>