unpackaged/main/default/objects/Account/fields/Cognism_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Cognism_Company_ID__c</fullName>
    <description>Cognism unique identifier for the Company.</description>
    <inlineHelpText>Cognism unique identifier for the Company.</inlineHelpText>
    <label>Cognism Company ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>