unpackaged/main/default/objects/Account/fields/CS_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>CS_Notes_Comments__c</fullName>
    <label>CS Notes &amp; Comments</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>