unpackaged/main/default/objects/Account/fields/CS_Notes_Comments_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CS_Notes_Comments_Last_Updated__c</fullName>
    <label>CS Notes &amp; Comments Last Updated</label>
    <type>DateTime</type>
</CustomField>