unpackaged/main/default/objects/Account/fields/CSM_POP_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>CSM_POP_Complete_Date__c</fullName>
    <label>CSM POP Complete Date</label>
    <type>Date</type>
</CustomField>