unpackaged/main/default/objects/Account/fields/CSM_POP_Complete_Status__c.field-meta.xml
<CustomField>
    <fullName>CSM_POP_Complete_Status__c</fullName>
    <label>CSM POP Complete Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POP In Progress</fullName>
            </value>
            <value>
                <fullName>POP Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>