unpackaged/main/default/objects/Account/fields/Current_Video_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Video_Solution__c</fullName>
    <label>Current Video Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Amagi</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Cloudflare</fullName>
            </value>
            <value>
                <fullName>Cloudinary</fullName>
            </value>
            <value>
                <fullName>DailyMotion</fullName>
            </value>
            <value>
                <fullName>DIY</fullName>
            </value>
            <value>
                <fullName>Endeavor</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>J-stream</fullName>
            </value>
            <value>
                <fullName>JW Player</fullName>
            </value>
            <value>
                <fullName>Kaltura</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Mux</fullName>
            </value>
            <value>
                <fullName>Panopto</fullName>
            </value>
            <value>
                <fullName>Quickplay</fullName>
            </value>
            <value>
                <fullName>Qumu</fullName>
            </value>
            <value>
                <fullName>StreamAMG</fullName>
            </value>
            <value>
                <fullName>Vbrick</fullName>
            </value>
            <value>
                <fullName>Vidyard</fullName>
            </value>
            <value>
                <fullName>Viewlift</fullName>
            </value>
            <value>
                <fullName>Vimeo</fullName>
            </value>
            <value>
                <fullName>Vimeo OTT</fullName>
            </value>
            <value>
                <fullName>Vimond</fullName>
            </value>
            <value>
                <fullName>Wistia</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Zype</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>