unpackaged/main/default/objects/Account/fields/DB_HQ_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DB_HQ_DUNS__c</fullName>
    <description>D&amp;B - Head Quarter D-U-N-S number - Mapped with the &quot;Headquarter D-U-N-S Number&quot; D&amp;B Element on D&amp;B Connect</description>
    <inlineHelpText>D&amp;B - Headquarters D-U-N-S Number. It was assigned by Dun &amp; Bradstreet, is an identification number that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
    <label>DB - HQ DUNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>