unpackaged/main/default/objects/Account/fields/DB_HQ_Primary_Name__c.field-meta.xml
<CustomField>
    <fullName>DB_HQ_Primary_Name__c</fullName>
    <description>D&amp;B - Headquarter name - Mapped with &quot;Headquarter Business Name&quot; D&amp;B Element in D&amp;B Connect</description>
    <inlineHelpText>D&amp;B - The single name by which the entity is primarily known or identified.</inlineHelpText>
    <label>DB - HQ Primary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>