unpackaged/main/default/objects/Account/fields/DB_ISO_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>DB_ISO_Country_Code__c</fullName>
    <description>D&amp;B - Country Code - Mapped with &quot;ISO Alpha 2 Char Country Code&quot; D&amp;B Element in D&amp;B Connect.</description>
    <inlineHelpText>D&amp;B - The two-letter country code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country in which the entity is located.</inlineHelpText>
    <label>DB - ISO Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>