unpackaged/main/default/objects/Account/fields/DB_Parent_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DB_Parent_DUNS__c</fullName>
    <description>D&amp;B - Parent Account&#39;s D-U-N-S Number - Mapped with &quot;Parent D-U-N-S Number&quot; D&amp;B Element in D&amp;B Connect.</description>
    <inlineHelpText>D&amp;B - The Parent Account&#39;s D-U-N-S Number, assigned by Dun &amp; Bradstreet, is an identification number that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
    <label>DB - Parent DUNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>