unpackaged/main/default/objects/Account/fields/DE_Company_Name_1st_Letter__c.field-meta.xml
<CustomField>
    <fullName>DE_Company_Name_1st_Letter__c</fullName>
    <description>Distribution Engine - Initial of the Company Name</description>
    <formula>UPPER( LEFT( TRIM( Name ),1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Distribution Engine - Initial of the Company Name</inlineHelpText>
    <label>DE - Company Name 1st Letter</label>
    <type>Text</type>
</CustomField>