unpackaged/main/default/objects/Account/fields/Edition_Setup__c.field-meta.xml
<CustomField>
    <fullName>Edition_Setup__c</fullName>
    <description>The edition type that support should use to create this account. mostly applies to Professional and Enterprise setups.</description>
    <inlineHelpText>The edition type that support should use to create this account.</inlineHelpText>
    <label>Edition Setup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>***DMBU***</fullName>
            </value>
            <value>
                <fullName>Enterprise Video Suite 2.0 - Starter</fullName>
            </value>
            <value>
                <fullName>Enterprise Video Suite 2.0 - Enterprise</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 Starter I (Contract)</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 Starter II (Contract)</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 Starter II (Credit Card)</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 Starter I (Credit Card)</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 Professional</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 Enterprise</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 - Elite</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite - Starter Plus</fullName>
            </value>
            <value>
                <fullName>Brightcove Elite (VMS+EVS)</fullName>
            </value>
            <value>
                <fullName>***MEDIA***</fullName>
            </value>
            <value>
                <fullName>Video Cloud Essential</fullName>
            </value>
            <value>
                <fullName>Video Cloud Select</fullName>
            </value>
            <value>
                <fullName>Video Cloud Advantage</fullName>
            </value>
            <value>
                <fullName>Video Cloud Elite</fullName>
            </value>
            <value>
                <fullName>Video Cloud Ultimate</fullName>
            </value>
            <value>
                <fullName>OTT Flow Core Package</fullName>
            </value>
            <value>
                <fullName>OTT Flow Connected Package</fullName>
            </value>
            <value>
                <fullName>OTT Flow Advanced Package</fullName>
            </value>
            <value>
                <fullName>OTT Flow X Core Package</fullName>
            </value>
            <value>
                <fullName>OTT Flow X Connected Package</fullName>
            </value>
            <value>
                <fullName>OTT Flow X Advanced Package</fullName>
            </value>
            <value>
                <fullName>Perform</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Pro Starter</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Brightcove Live Only</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>