unpackaged/main/default/objects/Account/fields/Email_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Name__c</fullName>
    <label>Email Domain Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>