unpackaged/main/default/objects/Account/fields/Expiration_Date_of_Current_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_of_Current_Agreement__c</fullName>
    <label>Expiration Date of Current Agreement</label>
    <type>Date</type>
</CustomField>