unpackaged/main/default/objects/Account/fields/HCOW__c.field-meta.xml
<CustomField>
    <fullName>HCOW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hot Customer Of The Week. Used to mark customers who are in need of every once of care and treatment we can give them.</description>
    <label>Platinum Alerts Active (Deprecate)</label>
    <type>Checkbox</type>
</CustomField>