unpackaged/main/default/objects/Account/fields/ICP_People_Engage_Tier__c.field-meta.xml
<CustomField>
    <fullName>ICP_People_Engage_Tier__c</fullName>
    <description>ICP People Engage - Tier Value</description>
    <inlineHelpText>ICP People Engage - Tier Value</inlineHelpText>
    <label>ICP People Engage - Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>