unpackaged/main/default/objects/Account/fields/Id_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Id_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id 18 Digit</label>
    <type>Text</type>
</CustomField>