unpackaged/main/default/objects/Account/fields/In_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>In_Marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Marketplace?</label>
    <type>Checkbox</type>
</CustomField>