unpackaged/main/default/objects/Account/fields/Invoice_Email_s__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_s__c</fullName>
    <label>Invoice Email(s)</label>
    <type>Email</type>
</CustomField>