unpackaged/main/default/objects/Account/fields/LegacyBCAccountMigrated__c.field-meta.xml
<CustomField>
    <fullName>LegacyBCAccountMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LegacyBCAccountMigrated</label>
    <type>Checkbox</type>
</CustomField>