unpackaged/main/default/objects/Account/fields/Live_Event_Support_hours_Active__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Support_hours_Active__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Live Event Support hours - Active</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>