unpackaged/main/default/objects/Account/fields/Live_Event_Support_Hours_used__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Support_Hours_used__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The total number of Live Coverage Hours used for successfully completed Live Event Coverage Requests.</inlineHelpText>
    <label>Live Event Support Hours used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>