unpackaged/main/default/objects/Account/fields/Manual_Live_Event_Support__c.field-meta.xml
<CustomField>
    <fullName>Manual_Live_Event_Support__c</fullName>
    <label>Manual Live Event Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>