unpackaged/main/default/objects/Account/fields/Marketplace_Contract_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Contract_Active_Date__c</fullName>
    <description>The date the Marketplace agreement was signed and fully executed</description>
    <label>Marketplace Contract Active Date</label>
    <type>Date</type>
</CustomField>