unpackaged/main/default/objects/Account/fields/Marketplace_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Contract_Type__c</fullName>
    <description>Indicates the highest level of contract a partner in the Marketplace has engaged in with Brightcove.  The contract should be linked to in the Partner Contract URL field.</description>
    <label>Marketplace Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace Partner Technology Agreement</fullName>
                <default>true</default>
                <label>Marketplace Partner Technology Agreement</label>
            </value>
            <value>
                <fullName>Marketplace Brightcove to Partner Referral</fullName>
            </value>
            <value>
                <fullName>Marketplace Bi-Lateral Referral Addendum</fullName>
            </value>
            <value>
                <fullName>Marketplace Resold Partner Addendum</fullName>
            </value>
            <value>
                <fullName>Product OEM/White-Label Technology Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>