unpackaged/main/default/objects/Account/fields/Marketplace_Partner_Referral_Percent__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Partner_Referral_Percent__c</fullName>
    <description>The contracted percentage of ACV that parnter is entitled to if the partner refers an opportunity that is closed won by Brightcove</description>
    <label>Marketplace Partner Referral Percent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>