unpackaged/main/default/objects/Account/fields/Marketplace_Resell_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Resell_Split_Percent__c</fullName>
    <description>Indicates the percentage of the Partner&#39;s ACV contract value that Brightcove is able to retain. In other words, our mark-up over our discounted price, or the percent of our discount over list.</description>
    <label>Marketplace Resell Split Percent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>