unpackaged/main/default/objects/Account/fields/Marketplace_Url__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Url__c</fullName>
    <description>The Link to the relevant Partner or Solution listing in the Marketplace</description>
    <label>Marketplace Url</label>
    <type>Url</type>
</CustomField>