unpackaged/main/default/objects/Account/fields/Master_Record__c.field-meta.xml
<CustomField>
    <fullName>Master_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Record</label>
    <type>Checkbox</type>
</CustomField>