unpackaged/main/default/objects/Account/fields/Monthly_Website_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Website_Traffic__c</fullName>
    <label>Monthly Website Traffic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-999</fullName>
            </value>
            <value>
                <fullName>1,000-9,999</fullName>
            </value>
            <value>
                <fullName>10,000-49,999</fullName>
            </value>
            <value>
                <fullName>50,000-99,999</fullName>
            </value>
            <value>
                <fullName>100,000-999,999</fullName>
            </value>
            <value>
                <fullName>1,000,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>