unpackaged/main/default/objects/Account/fields/Named_Account__c.field-meta.xml
<CustomField>
    <fullName>Named_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Named Account</label>
    <type>Checkbox</type>
</CustomField>