unpackaged/main/default/objects/Account/fields/Named_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>Named_Contact_List__c</fullName>
    <description>List of Named Support Contacts used by the Welcome to Support templates</description>
    <label>Named Contact List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>